0.1.3 (unreleased)
=====
* The license is now LGPL + linking exception.
* Corrected forgotten indice shifting in set_col_kind (thanks Pierre Lemaire).

0.1.2 (18-04-2005)
=====
* Put Val_int instead of Int_val in ocaml_glpk_get_direction and
  ocaml_glpk_get_class and added a unit parameter to ocaml_glpk_new_prob
  (thanks Mike Furr).
* Corrected a bug in load_matrix: glpk only wants non-null elements (found by
  Jeremy Dubreil).
* Added the use_presolver function to get exception with simplex when there is
  no feasible solution.
* Using caml namespace functions.

0.1.1 (23-06-2004)
=====
* Added functions: get_prob_name, get_obj_name, get_class, get_direction,
  get_row_name, get_col_name, warm_up.
* We are now raising exceptions on some errors (they are not all handled yet).

0.1.0 (24-04-2004)
=====
* Initial release.